crates/keron-lang/tests/corpus/errors/check/shell_wrong_arg_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `String`, found `Int`
  --> 1:68
  |
1 | val refresh: Shell = shell(kind = "sh", name = "refresh", script = 1)
  |                                                                    ^
